// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/TasksCounter Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-counter"
  >
    <div
      className="messages"
    >
      <h3
        className="container color-base"
      >
        Task resolved
      </h3>
      <h3
        className="container color-base"
      >
        5/10
      </h3>
    </div>
    <div
      className="container-separator color-base"
    >
      <hr
        className="separator-line color-base size-sm"
        title="Task Counter"
      />
    </div>
  </div>
  <div
    className="container-counter"
  >
    <div
      className="messages"
    >
      <h3
        className="container color-primary"
      >
        Task resolved
      </h3>
      <h3
        className="container color-primary"
      >
        5/10
      </h3>
    </div>
    <div
      className="container-separator color-primary"
    >
      <hr
        className="separator-line color-primary size-sm"
        title="Task Counter"
      />
    </div>
  </div>
  <div
    className="container-counter"
  >
    <div
      className="messages"
    >
      <h3
        className="container color-muted"
      >
        Task resolved
      </h3>
      <h3
        className="container color-muted"
      >
        5/10
      </h3>
    </div>
    <div
      className="container-separator color-muted"
    >
      <hr
        className="separator-line color-muted size-sm"
        title="Task Counter"
      />
    </div>
  </div>
  <div
    className="container-counter"
  >
    <div
      className="messages"
    >
      <h3
        className="container color-button"
      >
        Task resolved
      </h3>
      <h3
        className="container color-button"
      >
        5/10
      </h3>
    </div>
    <div
      className="container-separator color-button"
    >
      <hr
        className="separator-line color-button size-sm"
        title="Task Counter"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/TasksCounter Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-counter"
  >
    <div
      className="messages"
    >
      <h3
        className="container color-primary"
      >
        Task resolved
      </h3>
      <h3
        className="container color-primary"
      >
        5/10
      </h3>
    </div>
    <div
      className="container-separator color-primary"
    >
      <hr
        className="separator-line color-primary size-sm"
        title="Task Counter"
      />
    </div>
  </div>
</div>
`;
